2007-06-09  Nickolay V. Shmyrev  <nshmyrev@yandex.ru>

	* configure.ac:
	* src/Makefile.am:
	* src/spi-listener.c: (control_spi_listener_free_actions_list),
	(control_spi_listener_dump_actions_list), (is_visible),
	(is_actionable), (control_spi_listener_build_actions_list),
	(control_spi_listener_process_event),
	(control_spi_listener_window_listener_cb),
	(control_spi_listener_showing_listener_cb),
	(control_spi_listener_init), (control_spi_listener_class_init):
	* src/spi-listener.h:
	* src/voice-control.c: (control_start), (main):
	
	Added accessibility listener.

2007-06-07  Raphael Nunes da Motta  <raphael.nunes.enc04@gmail.com>

	* README:
	* configure.ac:
	* src/gstsphinxsink.c:

        Instalation problems solved and readme updated

2007-06-06  Raphael Nunes da Motta  <raphael.nunes.enc04@gmail.com>

	* README:

        Updated README.

2007-06-03  Nickolay V. Shmyrev  <nshmyrev@yandex.ru>

	* Makefile.am:
	* lang/Makefile.am:
	
	Distcheck fixes

2007-06-03  Nickolay V. Shmyrev  <nshmyrev@yandex.ru>

	* src/gstsphinxsink.c: (gst_sphinx_sink_class_init),
	(gst_sphinx_sink_start), (gst_sphinx_sink_render):
	* src/gstsphinxsink.h:
	* src/voice-control.c: (on_sink_initialization),
	(voice_control_applet_create_pipeline), (main):
	
	Threading problems seems to be solved.

2007-06-03  Nickolay V. Shmyrev  <nshmyrev@yandex.ru>

	* configure.ac:
	* lang/desktop-control.fsg:
	* src/action.c: (do_action):
	* src/action.h:
	* src/gstsphinxsink.c: (gst_sphinx_sink_base_init),
	(gst_sphinx_sink_start), (gst_sphinx_sink_render):
	* src/gstsphinxsink.h:
	* src/voice-control.c: (on_sink_calibration), (on_sink_listening),
	(on_sink_ready), (on_sink_message), (voice_control_applet_init),
	(main):
	
	Window actions through libwnck

2007-06-03  Nickolay V. Shmyrev  <nshmyrev@yandex.ru>

	* lang/desktop-control.dict:
	* lang/desktop-control.fsg:
	* src/action.c: (do_action):
	* src/action.h:
	* src/gstsphinxsink.c: (gst_sphinx_sink_render):